# simple_test

./: .gitignore  CMakeLists.txt  README.md  gtest_compatible_test.h  just_simple_test.cpp  simple_test.h  test_using_gtest.cpp  test_using_simple_test.cpp
examples/: gtest_compatible_test_failures.h  gtest_compatible_test_ok.h  just_simple_test_failures.cpp  just_simple_test_ok.cpp  test_using_gtest_failures.cpp  test_using_gtest_ok.cpp  test_using_simple_test_failures.cpp  test_using_simple_test_ok.cpp
